# COMP263-Deep-Learning

./: .gitignore  README.md
Fina project/fraud-sentinel/: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
Fina project/fraud-sentinel/backend/: Dockerfile  Dockerfile.trainer
Fina project/fraud-sentinel/backend/fraud_sentinel/: __init__.py  feature_schema.py  repository.py  risk.py  schemas.py  settings.py
Fina project/fraud-sentinel/backend/migrations/: 001_init.sql  002_fraud_agent_runs.sql
Fina project/fraud-sentinel/backend/tests/: test_api_contract.py  test_feature_schema.py  test_grounding.py  test_rag.py  test_repository.py  test_risk.py  test_training.py
Fina project/fraud-sentinel/ci/: e2e_api.py  smoke_cluster.sh
Fina project/fraud-sentinel/docs/: architecture.md  deployment-runbook.md  report-outline.md  ui-design-handoff.md
Fina project/fraud-sentinel/docs/diagrams/: batch-upload-flow.mmd  gitops-deployment.mmd  human-review-states.mmd  model-training.mmd  platform-overview.mmd  prediction-flow.mmd
Fina project/fraud-sentinel/frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js
Fina project/fraud-sentinel/frontend/src/: app.css  app.html
Fina project/fraud-sentinel/k8s/base/: agent-deployment.yaml  api-deployment.yaml  cloudflared-servicemonitor.yaml  cloudflared-tunnel.yaml  configmap.yaml  grafana-dashboard-configmap.yaml  kustomization.yaml  migration-job.yaml  namespace.yaml  (+10 more)
Fina project/fraud-sentinel/policy/: ethics-and-review.md  fraud-response-playbook.md  model-card.md  threshold-policy.md
(+51 files in other folders)
