[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-sentinel"
version = "0.1.0"
description = "Deployment-ready fraud detection with PyTorch, FastAPI, LangGraph, RAG, and GitOps manifests."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "joblib>=1.4.2",
  "kaggle>=1.6.17",
  "langgraph>=1.0.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "numpy>=1.26.0",
  "openai>=1.50.0",
  "pandas>=2.2.0",
  "prometheus-client>=0.21.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "psycopg[binary,pool]>=3.2.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "python-multipart>=0.0.12",
  "qdrant-client>=1.12.0",
  "scikit-learn>=1.5.0",
  "structlog>=24.4.0",
  "torch>=2.4.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0"
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

